fix build commands

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "stockscreener",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @11ty/eleventy"
+    "build": "npx @11ty/eleventy",
+    "start": "npx http-server dist"
   },
   "repository": {
     "type": "git",
