update build command

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx @11ty/eleventy",
+    "build": "pwd && npx @11ty/eleventy",
     "start": "npx http-server dist"
   },
   "repository": {
